# rust_onnx_nlp

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  readme_v2.md
src/: main.rs
